@@ -1,3 +1,10 @@
+2007-08-31  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* Makefile.am (INCLUDES): Remove -D_GNU_SOURCE.
+	* Makefile.in: Regenerated.
+
+	* sysdep.h: Include "config.h" first.
+
 2007-08-31  Nick Clifton  <nickc@redhat.com>
 
 	* po/sk.po: New Slovakian translation.
